# submerger

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: wq3m2cm9qr2hsw9z198afwh46lk5pqjh-source  xnr2xjs0clkhlhqfc3vqcmhnnwdk3c5p-source
.github/workflows/: deployment.yml
src/: main.rs  merge.rs  test.rs
