[package]
name = "sub-merge"
version = "0.1.2"
edition = "2021"
description = "Submerge combines subtitles from two files into one, with customizable position and color settings"
license = "MIT"
repository = "https://github.com/rasmus-kirk/sub-merge"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
subtp = "0.2"
simple_logger = "5.0"
log = "0.4"
anyhow = "1.0"
walkdir = "2.5.0"
regex = "1.10.6"
