[package]
name = "submerger"
version = "0.2.0"
edition = "2021"
description = "Submerger combines subtitles from two files into one, with customizable position and color settings"
license = "MIT"
repository = "https://github.com/rasmus-kirk/submerger.git"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
subtp = "0.2"
simple_logger = "5.0"
log = "0.4"
anyhow = "1.0"
walkdir = "2.5"
regex = "1.10"
chrono = "0.4.41"
